force-app/main/default/objects/sked__Job__c/fields/sked_Volunteer_Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Volunteer_Adjustment_Reason__c</fullName>
    <description>Created this field as part of HRP-13119</description>
    <label>Volunteer Adjustment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Configuration</fullName>
            </value>
            <value>
                <fullName>Below Procedure Projection of 17</fullName>
            </value>
            <value>
                <fullName>Appeal</fullName>
            </value>
            <value>
                <fullName>Additional Volunteers</fullName>
            </value>
            <value>
                <fullName>Event Drives (High Profile Drives)</fullName>
            </value>
            <value>
                <fullName>High Donor Presentation</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Request after 6-week calendar lock</fullName>
            </value>
            <value>
                <fullName>Volunteer not needed (Removal of volunteer)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>