force-app/main/default/objects/sked__Job__c/fields/sked_Wrap_up_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Wrap_up_Time__c</fullName>
    <label>Wrap-up Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>