force-app/main/default/objects/sked__Job__c/validationRules/sked__DurationMustBeGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__DurationMustBeGreaterThanZero</fullName>
    <active>true</active>
    <errorConditionFormula>sked__Duration__c  &lt; 1</errorConditionFormula>
    <errorDisplayField>sked__Duration__c</errorDisplayField>
    <errorMessage>A job&#39;s duration must be greater than 0 minutes</errorMessage>
</ValidationRule>