force-app/main/default/objects/sked__Job__c/validationRules/sked__DurationMustMatchStartToFinish.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__DurationMustMatchStartToFinish</fullName>
    <active>true</active>
    <description>Check to see that the duration is the amount of minutes between start and finish. Also enforces that start and finish are to the minute by virtue of the ROUND function</description>
    <errorConditionFormula>AND(
  NOT ISNULL(sked__Finish__c), NOT ISNULL(sked__Start__c), sked__Duration__c &lt;&gt; ROUND(((sked__Finish__c - sked__Start__c) * 1440),0)  )</errorConditionFormula>
    <errorMessage>If Start and End are both set, then Duration must match</errorMessage>
</ValidationRule>