force-app/main/default/objects/sked__Job__c/validationRules/sked__DurationNoGreaterThan24Hrs.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__DurationNoGreaterThan24Hrs</fullName>
    <active>false</active>
    <description>A job&#39;s duration can not be longer than 24 hrs</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Duration cannot exceed 24 hours</errorMessage>
</ValidationRule>