force-app/main/default/objects/sked__Job__c/validationRules/sked__FinishMustProvidedIfStartProvided.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__FinishMustProvidedIfStartProvided</fullName>
    <active>true</active>
    <description>Either both Start and End are set, or both are blank.</description>
    <errorConditionFormula>AND (
  NOT ISNULL( sked__Start__c ),ISNULL( sked__Finish__c )
)</errorConditionFormula>
    <errorMessage>Both Start and Finish date must be provided or they both must be blank</errorMessage>
</ValidationRule>