force-app/main/default/objects/sked__Job__c/validationRules/sked__MinAttendeesNonNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__MinAttendeesNonNegative</fullName>
    <active>true</active>
    <errorConditionFormula>AND (NOT(ISNULL(sked__Min_Attendees__c)), sked__Min_Attendees__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>sked__Min_Attendees__c</errorDisplayField>
    <errorMessage>If Min Attendees is set it must not be negative.</errorMessage>
</ValidationRule>