force-app/main/default/objects/sked__Job__c/validationRules/sked__NoRRWithQuantityPresent.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__NoRRWithQuantityPresent</fullName>
    <active>true</active>
    <errorConditionFormula>AND( sked__Resource_Requirement_Count__c  &gt; 0 , NOT( ISNULL( sked__Quantity__c ) ) )</errorConditionFormula>
    <errorDisplayField>sked__Quantity__c</errorDisplayField>
    <errorMessage>Job quantity must be null to have resource requirement</errorMessage>
</ValidationRule>