force-app/main/default/objects/sked__Job__c/validationRules/sked__notify_period_must_be_24_hours_or_more.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__notify_period_must_be_24_hours_or_more</fullName>
    <active>true</active>
    <description>Must be greater than 24 hours</description>
    <errorConditionFormula>sked__NotifyPeriod__c &lt; 1</errorConditionFormula>
    <errorDisplayField>sked__NotifyPeriod__c</errorDisplayField>
    <errorMessage>Notify Period must be 24 hours or more</errorMessage>
</ValidationRule>