force-app/main/default/objects/sked__Job__c/validationRules/sked__notify_period_requires_start_date_time.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__notify_period_requires_start_date_time</fullName>
    <active>false</active>
    <description>when user enters NotifyPeriod, they must also enter Start</description>
    <errorConditionFormula>ISBLANK(sked__Start__c)  &amp;&amp;  (ISBLANK( sked__NotifyPeriod__c )  &lt;&gt; true)</errorConditionFormula>
    <errorDisplayField>sked__Start__c</errorDisplayField>
    <errorMessage>Notify Period requires a valid Start</errorMessage>
</ValidationRule>