force-app/main/default/objects/sked__Job__c/validationRules/sked__QuantityNullOrPositive.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__QuantityNullOrPositive</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISNULL( sked__Quantity__c ) ) , sked__Quantity__c  &lt;= 0 )</errorConditionFormula>
    <errorDisplayField>sked__Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be null or greater than 0</errorMessage>
</ValidationRule>