force-app/main/default/objects/sked__Job__c/validationRules/sked__StartEndDateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__StartEndDateCheck</fullName>
    <active>true</active>
    <errorConditionFormula>sked__Start__c &gt; sked__Finish__c</errorConditionFormula>
    <errorDisplayField>sked__Start__c</errorDisplayField>
    <errorMessage>Start Date cannot be after the End Date</errorMessage>
</ValidationRule>