force-app/main/default/objects/sked__Job__c/validationRules/sked__StartMustProvidedIfFinishProvided.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__StartMustProvidedIfFinishProvided</fullName>
    <active>true</active>
    <description>Either both Start and End are set, or both are blank.</description>
    <errorConditionFormula>AND (
  ISNULL( sked__Start__c ),NOT ISNULL( sked__Finish__c )

)</errorConditionFormula>
    <errorMessage>Both Start and Finish date must be provided or they both must be blank</errorMessage>
</ValidationRule>