force-app/main/default/objects/sked__Job__c/listViews/All_Jobs.listView-meta.xml
<ListView>
    <fullName>All_Jobs</fullName>
    <columns>sked__Region__c</columns>
    <columns>NAME</columns>
    <columns>sked__Job_Status__c</columns>
    <columns>sked__Type__c</columns>
    <columns>sked_Resource_Role__c</columns>
    <columns>sked__Start__c</columns>
    <columns>sked__Finish__c</columns>
    <columns>sked_Start_Date__c</columns>
    <columns>sked_Start_Time__c</columns>
    <columns>sked_Drive__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Jobs</label>
</ListView>